[package]
name = "hello-again-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.5"
secp256k1 = { version = "0.27.0", features = ["rand", "bitcoin-hashes"] }